--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 			<span class="space"/><span class="comments">*2017—09-09,</span><br />
 			<span class="space"/><span class="comments">*2020-05-20.</span><br />
 			<span class="space"/><span class="comments">*/</span><br />
-			Boy name = <span class="keyword">Mr</span> LI<br />
-			Girl name = <span class="keyword">Mrs</span> ZHANG<br />
+			Boy name = <span class="keyword">Mr</span> FANG<br />
+			Girl name = <span class="keyword">Mrs</span> WU<br />
 			<span class="comments">// Fall in love river. </span><br />
 			The boy love the girl;<br />
 			<span class="comments">// They love each other.</span><br />
@@ -73,8 +73,8 @@
 var offsetX = $("#loveHeart").width() / 2;
 var offsetY = $("#loveHeart").height() / 2 - 55;
 var together = new Date();
-together.setFullYear(2013, 2, 28);
-together.setHours(20);
+together.setFullYear(2017, 9, 9);
+together.setHours(2);
 together.setMinutes(0);
 together.setSeconds(0);
 together.setMilliseconds(0);
